--- a/pom.xml
+++ b/pom.xml
@@ -73,11 +73,15 @@
 			<scope>test</scope>
 		</dependency>
 
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-rest</artifactId>
 			<version>3.2.5</version>
-		</dependency>
+		</dependency> -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+   		</dependency>
 	</dependencies>
 
 	<build>
