--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,17 @@
-DB_URL=jdbc:mysql://localhost:3306/contact_hive
-DB_USERNAME=your_username
-DB_PASSWORD=your_password
+DB_URL=
+DB_USERNAME=
+DB_PASSWORD=
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+
+baseUrl=
+registrationId=
+
+AWS_ACCESS_KEY=
+AWS_SECRET_KEY=
+AWS_REGION=
+AWS_BUCKET=
