--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1", 
+    "test": "echo \"Error: no test specified\" && exit 1",
     "build": "npx tailwindcss -i src/main/resources/static/css/input.css -o src/main/resources/static/css/input.css --watch"
-
   },
   "keywords": [],
   "author": "",
@@ -16,8 +15,7 @@
     "tailwindcss": "^3.4.16"
   },
   "dependencies": {
+    "flowbite": "^2.5.2",
     "tailgrids": "^2.2.7"
   }
 }
-
-
