feat: mailstrap-sending emails

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,3 +31,12 @@ cloud.aws.credentials.secret-key=${AWS_SECRET_KEY}
 cloud.aws.region.static=${AWS_REGION}
 app.s3.bucket=${AWS_BUCKET}
 cloud.aws.stack.auto=false
+
+#email config mailstrap
+spring.mail.host=live.smtp.mailtrap.io
+spring.mail.port=587
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.domain_name=${DOMAIN_NAME}
