--- a/pom.xml
+++ b/pom.xml
@@ -58,9 +58,9 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>com.mysql</groupId>
-			<artifactId>mysql-connector-j</artifactId>
-			<scope>runtime</scope>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.33</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -149,6 +149,7 @@
 				</configuration>
 			</plugin>
 		</plugins>
+		<finalName>ContactHive</finalName>
 	</build>
 
 </project>
