--- a/src/main/resources/application-template.properties
+++ b/src/main/resources/application-template.properties
@@ -1,44 +1,44 @@
-# Database Configuration
-spring.datasource.url=jdbc:mysql://localhost:3306/contact_hive
-spring.datasource.username=root
-spring.datasource.password=root1234
+# # Database Configuration
+# spring.datasource.url=jdbc:mysql://localhost:3306/contact_hive
+# spring.datasource.username=root
+# spring.datasource.password=root1234
 
-# Google OAuth2 Configuration
-spring.security.oauth2.client.registration.google.client-name=google
-spring.security.oauth2.client.registration.google.client-id=YOUR_GOOGLE_CLIENT_ID
-spring.security.oauth2.client.registration.google.client-secret=YOUR_GOOGLE_CLIENT_SECRET
-spring.security.oauth2.client.registration.google.scope=profile,email
+# # Google OAuth2 Configuration
+# spring.security.oauth2.client.registration.google.client-name=google
+# spring.security.oauth2.client.registration.google.client-id=YOUR_GOOGLE_CLIENT_ID
+# spring.security.oauth2.client.registration.google.client-secret=YOUR_GOOGLE_CLIENT_SECRET
+# spring.security.oauth2.client.registration.google.scope=profile,email
 
-# GitHub OAuth2 Configuration
-spring.security.oauth2.client.registration.github.client-name=github
-spring.security.oauth2.client.registration.github.client-id=YOUR_GITHUB_CLIENT_ID
-spring.security.oauth2.client.registration.github.client-secret=YOUR_GITHUB_CLIENT_SECRET
-spring.security.oauth2.client.registration.github.scope=profile,email
+# # GitHub OAuth2 Configuration
+# spring.security.oauth2.client.registration.github.client-name=github
+# spring.security.oauth2.client.registration.github.client-id=YOUR_GITHUB_CLIENT_ID
+# spring.security.oauth2.client.registration.github.client-secret=YOUR_GITHUB_CLIENT_SECRET
+# spring.security.oauth2.client.registration.github.scope=profile,email
 
-# AWS Configuration
-cloud.aws.credentials.access-key=YOUR_AWS_ACCESS_KEY
-cloud.aws.credentials.secret-key=YOUR_AWS_SECRET_KEY
-cloud.aws.region.static=ap-south-1
-app.s3.bucket=YOUR_AWS_BUCKET_NAME
-cloud.aws.stack.auto=false
+# # AWS Configuration
+# cloud.aws.credentials.access-key=YOUR_AWS_ACCESS_KEY
+# cloud.aws.credentials.secret-key=YOUR_AWS_SECRET_KEY
+# cloud.aws.region.static=ap-south-1
+# app.s3.bucket=YOUR_AWS_BUCKET_NAME
+# cloud.aws.stack.auto=false
 
-# Email Configuration (Mailtrap)
-spring.mail.host=live.smtp.mailtrap.io
-spring.mail.port=587
-spring.mail.username=YOUR_MAIL_USERNAME
-spring.mail.password=YOUR_MAIL_PASSWORD
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.properties.domain_name=YOUR_DOMAIN_NAME
+# # Email Configuration (Mailtrap)
+# spring.mail.host=live.smtp.mailtrap.io
+# spring.mail.port=587
+# spring.mail.username=YOUR_MAIL_USERNAME
+# spring.mail.password=YOUR_MAIL_PASSWORD
+# spring.mail.properties.mail.smtp.auth=true
+# spring.mail.properties.mail.smtp.starttls.enable=true
+# spring.mail.properties.domain_name=YOUR_DOMAIN_NAME
 
-# Application Name and Server Port
-spring.application.name=contact-hive
-server.port=8081
+# # Application Name and Server Port
+# spring.application.name=contact-hive
+# server.port=8081
 
-# JPA Configuration
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
+# # JPA Configuration
+# spring.jpa.show-sql=true
+# spring.jpa.hibernate.ddl-auto=update
 
-# Base URL and Registration ID (for OAuth)
-baseUrl=http://localhost:8081
-registrationId=google
+# # Base URL and Registration ID (for OAuth)
+# baseUrl=http://localhost:8081
+# registrationId=google
