--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -17,7 +17,7 @@ jobs:
         uses: JorgeLNJunior/render-deploy@v1.4.5
         with:
           service_id: ${{ secrets.RENDER_SERVICE_ID }}
-          api_key: ${{ secrets.CONTACTHIVE_KEY}}
+          api_key: ${{ secrets.RENDER_API_KEY}}
           github_deployment: true
           deployment_environment: 'production'
           github_token: ${{ secrets.GITHUB_TOKEN }}
