--- a/.github/workflows/render-deploy.yml
+++ b/.github/workflows/render-deploy.yml
@@ -8,16 +8,16 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
+    permissions:
+      deployments: write
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Deploy to Render
-        uses: JorgeLNJunior/render-deploy@v1.4.5
+      - uses: JorgeLNJunior/render-deploy@v1.4.5
         with:
           service_id: ${{ secrets.RENDER_SERVICE_ID }}
-          api_key: ${{ secrets.RENDER_API_KEY}}
+          api_key: ${{ secrets.RENDER_API_KEY }}
           github_deployment: true
-          deployment_environment: 'production'
+          deployment_environment: production
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          clear_cache: false
+          wait_deploy: false
+
